# dlr_adapter

./: CMakeLists.txt  README.md
include/: dlr.h
src/: dlr_adapter.c
